--- a/test-app/app/templates/combobox/combobox-basic.hbs
+++ b/test-app/app/templates/combobox/combobox-basic.hbs
@@ -15,6 +15,28 @@
           @displayValue={{this.displayValue}}
           class='inline-flex h-9 border border-gray-300 rounded-md rounded-r-none border-r-0 outline-none pl-3 w-full'
         />
+        {{#if this.selectedPerson}}
+          <button
+            type='button'
+            class='h-9 inline-flex items-center px-1 text-gray-400 hover:text-gray-600 bg-white border border-gray-300 border-l-0 border-r-0'
+            {{on 'click' this.clearSelection}}
+          >
+            <svg
+              xmlns='http://www.w3.org/2000/svg'
+              class='h-4 w-4'
+              fill='none'
+              viewBox='0 0 24 24'
+              stroke='currentColor'
+            >
+              <path
+                stroke-linecap='round'
+                stroke-linejoin='round'
+                stroke-width='2'
+                d='M6 18L18 6M6 6l12 12'
+              ></path>
+            </svg>
+          </button>
+        {{/if}}
         <combobox.Button
           class='h-9 rounded-l-none border-l-0 inline-flex justify-center w-22 px-2 py-2 text-sm font-medium leading-5 text-gray-700 transition duration-150 ease-in-out bg-white border border-gray-300 rounded-md hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800'
         >
