--- a/ember-headlessui/addon/components/listbox.hbs
+++ b/ember-headlessui/addon/components/listbox.hbs
@@ -13,7 +13,7 @@
       unregisterOptionsElement=this.unregisterOptionsElement
       hasLabelElement=this.labelElement
       activeOptionGuid=this.activeOptionGuid
-      selectedOptionGuid=this.selectedOptionGuid
+      selectedOptionGuids=this.selectedOptionGuids
       setActiveOption=this.setActiveOption
       unsetActiveOption=this.unsetActiveOption
       setSelectedOption=this.setSelectedOption
@@ -25,6 +25,7 @@
       handleClickOutside=this.handleClickOutside
       selectedValue=@value
       scrollIntoView=this.scrollIntoView
+      multiple=@multiple
     )
     Button=(component
       'listbox/-button'
