--- a/ember-headlessui/addon/components/listbox/-option.hbs
+++ b/ember-headlessui/addon/components/listbox/-option.hbs
@@ -9,14 +9,14 @@
     {{on 'mouseover' (fn @setActiveOption this)}}
     {{on 'mouseout' @unsetActiveOption}}
     {{on 'click' this.handleClick}}
-    aria-selected={{if this.isSelectedOption 'true'}}
+    aria-selected={{if this.isSelected 'true'}}
     disabled={{if @disabled true false}}
     ...attributes
   >
     {{yield
       (hash
-        active=this.isActiveOption
-        selected=this.isSelectedOption
+        active=this.isActive
+        selected=this.isSelected
         disabled=(if @disabled true false)
       )
     }}
