--- a/ember-headlessui/addon/components/listbox/-options.hbs
+++ b/ember-headlessui/addon/components/listbox/-options.hbs
@@ -11,6 +11,7 @@
       }}
       aria-activedescendant={{@activeOptionGuid}}
       aria-orientation='vertical'
+      aria-multiselectable={{if @multiple 'true'}}
       {{this.registerOptions}}
       {{on 'keypress' @handleKeyPress}}
       {{on 'keydown' @handleKeyDown}}
@@ -28,12 +29,13 @@
             'listbox/-option'
             registerOptionElement=@registerOptionElement
             activeOptionGuid=@activeOptionGuid
-            selectedOptionGuid=@selectedOptionGuid
+            selectedOptionGuids=@selectedOptionGuids
             setActiveOption=@setActiveOption
             unsetActiveOption=@unsetActiveOption
             setSelectedOption=@setSelectedOption
             selectedValue=@selectedValue
             scrollIntoView=@scrollIntoView
+            multiple=@multiple
           )
         )
       }}
