add docs and tests
Co-authored-by: miguelcobain <jmandrade0@gmail.com>

--- a/test-app/app/templates/index.hbs
+++ b/test-app/app/templates/index.hbs
@@ -37,6 +37,11 @@
               Listbox with Transition
             </LinkTo>
           </li>
+          <li>
+            <LinkTo @route='listbox.listbox-multiple'>
+              Listbox Multiple
+            </LinkTo>
+          </li>
         </ul>
       </li>
       <li>
